--- a/api X 비트코인 data.ipynb
+++ b/api X 비트코인 data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,108 +30,325 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-01-13 00:00:00\n",
-      "2024-01-13 00:17:39\n",
-      "2024-01-13 00:35:18\n",
-      "2024-01-13 00:52:57\n",
-      "2024-01-13 01:10:36\n",
-      "2024-01-13 01:28:15\n",
-      "2024-01-13 01:45:54\n",
-      "2024-01-13 02:03:33\n",
-      "2024-01-13 02:21:12\n",
-      "2024-01-13 02:38:51\n",
-      "2024-01-13 02:56:30\n",
-      "2024-01-13 03:14:09\n",
-      "2024-01-13 03:31:48\n",
-      "2024-01-13 03:49:27\n",
-      "2024-01-13 04:07:06\n",
-      "2024-01-13 04:24:45\n",
-      "2024-01-13 04:42:24\n",
-      "2024-01-13 05:00:03\n",
-      "2024-01-13 05:17:42\n",
-      "2024-01-13 05:35:21\n",
-      "2024-01-13 05:53:00\n",
-      "2024-01-13 06:10:39\n",
-      "2024-01-13 06:28:18\n",
-      "2024-01-13 06:45:57\n",
-      "2024-01-13 07:03:36\n",
-      "2024-01-13 07:21:15\n",
-      "2024-01-13 07:38:54\n",
-      "2024-01-13 07:56:33\n",
-      "2024-01-13 08:14:12\n",
-      "2024-01-13 08:31:51\n",
-      "2024-01-13 08:49:30\n",
-      "2024-01-13 09:07:09\n",
-      "2024-01-13 09:24:48\n",
-      "2024-01-13 09:42:27\n",
-      "2024-01-13 10:00:06\n",
-      "2024-01-13 10:17:45\n",
-      "2024-01-13 10:35:24\n",
-      "2024-01-13 10:53:03\n",
-      "2024-01-13 11:10:42\n",
-      "2024-01-13 11:28:21\n",
-      "2024-01-13 11:46:00\n",
-      "2024-01-13 12:03:39\n",
-      "2024-01-13 12:21:18\n",
-      "2024-01-13 12:38:57\n",
-      "2024-01-13 12:56:36\n",
-      "2024-01-13 13:14:15\n",
-      "2024-01-13 13:31:54\n",
-      "2024-01-13 13:49:33\n",
-      "2024-01-13 14:07:12\n",
-      "2024-01-13 14:24:51\n",
-      "2024-01-13 14:42:30\n",
-      "2024-01-13 15:00:09\n",
-      "2024-01-13 15:17:48\n",
-      "2024-01-13 15:35:27\n",
-      "2024-01-13 15:53:06\n",
-      "2024-01-13 16:10:45\n",
-      "2024-01-13 16:28:24\n",
-      "2024-01-13 16:46:03\n",
-      "2024-01-13 17:03:42\n",
-      "2024-01-13 17:21:21\n",
-      "2024-01-13 17:39:00\n",
-      "2024-01-13 17:56:39\n",
-      "2024-01-13 18:14:18\n",
-      "2024-01-13 18:31:57\n",
-      "2024-01-13 18:49:36\n",
-      "2024-01-13 19:07:15\n",
-      "2024-01-13 19:24:54\n",
-      "2024-01-13 19:42:33\n",
-      "2024-01-13 20:00:12\n",
-      "2024-01-13 20:17:51\n",
-      "2024-01-13 20:35:30\n",
-      "2024-01-13 20:53:09\n",
-      "2024-01-13 21:10:48\n",
-      "2024-01-13 21:28:27\n",
-      "2024-01-13 21:46:06\n",
-      "2024-01-13 22:03:45\n",
-      "2024-01-13 22:21:24\n",
-      "2024-01-13 22:39:03\n",
-      "2024-01-13 22:56:42\n",
-      "2024-01-13 23:14:21\n",
-      "2024-01-13 23:32:00\n",
-      "2024-01-13 23:49:39\n"
+      "2022-05-16 00:00:00\n",
+      "2022-05-16 00:17:39\n",
+      "2022-05-16 00:35:18\n",
+      "2022-05-16 00:52:57\n",
+      "2022-05-16 01:10:36\n",
+      "2022-05-16 01:28:15\n",
+      "2022-05-16 01:45:54\n",
+      "2022-05-16 02:03:33\n",
+      "2022-05-16 02:21:12\n",
+      "2022-05-16 02:38:51\n",
+      "2022-05-16 02:56:30\n",
+      "2022-05-16 03:14:09\n",
+      "2022-05-16 03:31:48\n",
+      "2022-05-16 03:49:27\n",
+      "2022-05-16 04:07:06\n",
+      "2022-05-16 04:24:45\n",
+      "2022-05-16 04:42:24\n",
+      "2022-05-16 05:00:03\n",
+      "2022-05-16 05:17:42\n",
+      "2022-05-16 05:35:21\n",
+      "2022-05-16 05:53:00\n",
+      "2022-05-16 06:10:39\n",
+      "2022-05-16 06:28:18\n",
+      "2022-05-16 06:45:57\n",
+      "2022-05-16 07:03:36\n",
+      "2022-05-16 07:21:15\n",
+      "2022-05-16 07:38:54\n",
+      "2022-05-16 07:56:33\n",
+      "2022-05-16 08:14:12\n",
+      "2022-05-16 08:31:51\n",
+      "2022-05-16 08:49:30\n",
+      "2022-05-16 09:07:09\n",
+      "2022-05-16 09:24:48\n",
+      "2022-05-16 09:42:27\n",
+      "2022-05-16 10:00:06\n",
+      "2022-05-16 10:17:45\n",
+      "2022-05-16 10:35:24\n",
+      "2022-05-16 10:53:03\n",
+      "2022-05-16 11:10:42\n",
+      "2022-05-16 11:28:21\n",
+      "2022-05-16 11:46:00\n",
+      "2022-05-16 12:03:39\n",
+      "2022-05-16 12:21:18\n",
+      "2022-05-16 12:38:57\n",
+      "2022-05-16 12:56:36\n",
+      "2022-05-16 13:14:15\n",
+      "2022-05-16 13:31:54\n",
+      "2022-05-16 13:49:33\n",
+      "2022-05-16 14:07:12\n",
+      "2022-05-16 14:24:51\n",
+      "2022-05-16 14:42:30\n",
+      "2022-05-16 15:00:09\n",
+      "2022-05-16 15:17:48\n",
+      "2022-05-16 15:35:27\n",
+      "2022-05-16 15:53:06\n",
+      "2022-05-16 16:10:45\n",
+      "2022-05-16 16:28:24\n",
+      "2022-05-16 16:46:03\n",
+      "2022-05-16 17:03:42\n",
+      "2022-05-16 17:21:21\n",
+      "2022-05-16 17:39:00\n",
+      "2022-05-16 17:56:39\n",
+      "2022-05-16 18:14:18\n",
+      "2022-05-16 18:31:57\n",
+      "2022-05-16 18:49:36\n",
+      "2022-05-16 19:07:15\n",
+      "2022-05-16 19:24:54\n",
+      "2022-05-16 19:42:33\n",
+      "2022-05-16 20:00:12\n",
+      "2022-05-16 20:17:51\n",
+      "2022-05-16 20:35:30\n",
+      "2022-05-16 20:53:09\n",
+      "2022-05-16 21:10:48\n",
+      "2022-05-16 21:28:27\n",
+      "2022-05-16 21:46:06\n",
+      "2022-05-16 22:03:45\n",
+      "2022-05-16 22:21:24\n",
+      "2022-05-16 22:39:03\n",
+      "2022-05-16 22:56:42\n",
+      "2022-05-16 23:14:21\n",
+      "2022-05-16 23:32:00\n",
+      "2022-05-16 23:49:39\n",
+      "데이터가 C:\\education\\ml_dev\\coin\\jh_-\\BTCUSDT_data_2022-05-16_2022-05-16.csv에 저장되었습니다.\n"
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'os' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\education\\ml_dev\\coin\\api X 비트코인 data.ipynb 셀 3\u001b[0m line \u001b[0;36m5\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/education/ml_dev/coin/api%20X%20%EB%B9%84%ED%8A%B8%EC%BD%94%EC%9D%B8%20data.ipynb#W2sZmlsZQ%3D%3D?line=47'>48</a>\u001b[0m end_date \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m2024-01-13\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/education/ml_dev/coin/api%20X%20%EB%B9%84%ED%8A%B8%EC%BD%94%EC%9D%B8%20data.ipynb#W2sZmlsZQ%3D%3D?line=48'>49</a>\u001b[0m symbol \u001b[39m=\u001b[39m symbols_usdt[\u001b[39m0\u001b[39m]\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/education/ml_dev/coin/api%20X%20%EB%B9%84%ED%8A%B8%EC%BD%94%EC%9D%B8%20data.ipynb#W2sZmlsZQ%3D%3D?line=49'>50</a>\u001b[0m get_data(start_date, end_date, symbol)\n",
-      "\u001b[1;32mc:\\education\\ml_dev\\coin\\api X 비트코인 data.ipynb 셀 3\u001b[0m line \u001b[0;36m4\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/education/ml_dev/coin/api%20X%20%EB%B9%84%ED%8A%B8%EC%BD%94%EC%9D%B8%20data.ipynb#W2sZmlsZQ%3D%3D?line=38'>39</a>\u001b[0m  \u001b[39m# 데이터를 CSV 파일로 저장\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/education/ml_dev/coin/api%20X%20%EB%B9%84%ED%8A%B8%EC%BD%94%EC%9D%B8%20data.ipynb#W2sZmlsZQ%3D%3D?line=39'>40</a>\u001b[0m output_folder \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m./education/coin/jh_-/\u001b[39m\u001b[39m'\u001b[39m  \u001b[39m# 여기에 원하는 폴더 경로를 지정합니다.\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/education/ml_dev/coin/api%20X%20%EB%B9%84%ED%8A%B8%EC%BD%94%EC%9D%B8%20data.ipynb#W2sZmlsZQ%3D%3D?line=40'>41</a>\u001b[0m binance_csv \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(output_folder, \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00msymbol\u001b[39m}\u001b[39;00m\u001b[39m_data_\u001b[39m\u001b[39m{\u001b[39;00mstart_date\u001b[39m}\u001b[39;00m\u001b[39m_\u001b[39m\u001b[39m{\u001b[39;00mend_date\u001b[39m}\u001b[39;00m\u001b[39m.csv\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/education/ml_dev/coin/api%20X%20%EB%B9%84%ED%8A%B8%EC%BD%94%EC%9D%B8%20data.ipynb#W2sZmlsZQ%3D%3D?line=41'>42</a>\u001b[0m df\u001b[39m.\u001b[39mto_csv(binance_csv, index\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/education/ml_dev/coin/api%20X%20%EB%B9%84%ED%8A%B8%EC%BD%94%EC%9D%B8%20data.ipynb#W2sZmlsZQ%3D%3D?line=42'>43</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m데이터가 \u001b[39m\u001b[39m{\u001b[39;00mbinance_csv\u001b[39m}\u001b[39;00m\u001b[39m에 저장되었습니다.\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'os' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open_time</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>quote_av</th>\n",
+       "      <th>trades</th>\n",
+       "      <th>tb_base_av</th>\n",
+       "      <th>tb_quote_av</th>\n",
+       "      <th>Symbol</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2022-05-16 00:00:00</td>\n",
+       "      <td>29974.67</td>\n",
+       "      <td>29974.68</td>\n",
+       "      <td>29974.67</td>\n",
+       "      <td>29974.67</td>\n",
+       "      <td>0.27112</td>\n",
+       "      <td>8126.732642</td>\n",
+       "      <td>29</td>\n",
+       "      <td>0.0112</td>\n",
+       "      <td>335.716416</td>\n",
+       "      <td>BTCUSDT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2022-05-16 00:00:01</td>\n",
+       "      <td>29974.67</td>\n",
+       "      <td>29974.67</td>\n",
+       "      <td>29971.14</td>\n",
+       "      <td>29971.14</td>\n",
+       "      <td>0.04276</td>\n",
+       "      <td>1281.604722</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0.02942</td>\n",
+       "      <td>881.750939</td>\n",
+       "      <td>BTCUSDT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022-05-16 00:00:02</td>\n",
+       "      <td>29971.13</td>\n",
+       "      <td>29976.93</td>\n",
+       "      <td>29971.12</td>\n",
+       "      <td>29976.93</td>\n",
+       "      <td>0.40117</td>\n",
+       "      <td>12023.886715</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0.35786</td>\n",
+       "      <td>10725.635351</td>\n",
+       "      <td>BTCUSDT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022-05-16 00:00:03</td>\n",
+       "      <td>29976.92</td>\n",
+       "      <td>29976.93</td>\n",
+       "      <td>29976.92</td>\n",
+       "      <td>29976.92</td>\n",
+       "      <td>0.03419</td>\n",
+       "      <td>1024.911191</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.02958</td>\n",
+       "      <td>886.717589</td>\n",
+       "      <td>BTCUSDT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022-05-16 00:00:04</td>\n",
+       "      <td>29976.92</td>\n",
+       "      <td>29976.93</td>\n",
+       "      <td>29976.92</td>\n",
+       "      <td>29976.93</td>\n",
+       "      <td>0.05298</td>\n",
+       "      <td>1588.177691</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.04698</td>\n",
+       "      <td>1408.316171</td>\n",
+       "      <td>BTCUSDT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81557</th>\n",
+       "      <td>2022-05-16 23:58:56</td>\n",
+       "      <td>29527.03</td>\n",
+       "      <td>29527.03</td>\n",
+       "      <td>29526.15</td>\n",
+       "      <td>29526.15</td>\n",
+       "      <td>0.07563</td>\n",
+       "      <td>2233.077358</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0.03267</td>\n",
+       "      <td>964.619647</td>\n",
+       "      <td>BTCUSDT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81558</th>\n",
+       "      <td>2022-05-16 23:58:57</td>\n",
+       "      <td>29526.15</td>\n",
+       "      <td>29526.15</td>\n",
+       "      <td>29521.8</td>\n",
+       "      <td>29522.53</td>\n",
+       "      <td>1.83039</td>\n",
+       "      <td>54041.078014</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1.61325</td>\n",
+       "      <td>47630.404848</td>\n",
+       "      <td>BTCUSDT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81559</th>\n",
+       "      <td>2022-05-16 23:58:58</td>\n",
+       "      <td>29521.17</td>\n",
+       "      <td>29521.17</td>\n",
+       "      <td>29520.0</td>\n",
+       "      <td>29520.01</td>\n",
+       "      <td>0.4052</td>\n",
+       "      <td>11961.515631</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0.37097</td>\n",
+       "      <td>10951.03811</td>\n",
+       "      <td>BTCUSDT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81560</th>\n",
+       "      <td>2022-05-16 23:58:59</td>\n",
+       "      <td>29520.0</td>\n",
+       "      <td>29520.0</td>\n",
+       "      <td>29512.54</td>\n",
+       "      <td>29512.54</td>\n",
+       "      <td>0.21342</td>\n",
+       "      <td>6299.139281</td>\n",
+       "      <td>58</td>\n",
+       "      <td>0.10162</td>\n",
+       "      <td>2999.179466</td>\n",
+       "      <td>BTCUSDT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81561</th>\n",
+       "      <td>2022-05-16 23:59:00</td>\n",
+       "      <td>29512.55</td>\n",
+       "      <td>29512.55</td>\n",
+       "      <td>29512.54</td>\n",
+       "      <td>29512.54</td>\n",
+       "      <td>1.28262</td>\n",
+       "      <td>37853.38668</td>\n",
+       "      <td>37</td>\n",
+       "      <td>1.26256</td>\n",
+       "      <td>37261.365128</td>\n",
+       "      <td>BTCUSDT</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>81562 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Open_time      Open      High       Low     Close   Volume  \\\n",
+       "0     2022-05-16 00:00:00  29974.67  29974.68  29974.67  29974.67  0.27112   \n",
+       "1     2022-05-16 00:00:01  29974.67  29974.67  29971.14  29971.14  0.04276   \n",
+       "2     2022-05-16 00:00:02  29971.13  29976.93  29971.12  29976.93  0.40117   \n",
+       "3     2022-05-16 00:00:03  29976.92  29976.93  29976.92  29976.92  0.03419   \n",
+       "4     2022-05-16 00:00:04  29976.92  29976.93  29976.92  29976.93  0.05298   \n",
+       "...                   ...       ...       ...       ...       ...      ...   \n",
+       "81557 2022-05-16 23:58:56  29527.03  29527.03  29526.15  29526.15  0.07563   \n",
+       "81558 2022-05-16 23:58:57  29526.15  29526.15   29521.8  29522.53  1.83039   \n",
+       "81559 2022-05-16 23:58:58  29521.17  29521.17   29520.0  29520.01   0.4052   \n",
+       "81560 2022-05-16 23:58:59   29520.0   29520.0  29512.54  29512.54  0.21342   \n",
+       "81561 2022-05-16 23:59:00  29512.55  29512.55  29512.54  29512.54  1.28262   \n",
+       "\n",
+       "           quote_av  trades tb_base_av   tb_quote_av   Symbol  \n",
+       "0       8126.732642      29     0.0112    335.716416  BTCUSDT  \n",
+       "1       1281.604722       9    0.02942    881.750939  BTCUSDT  \n",
+       "2      12023.886715      17    0.35786  10725.635351  BTCUSDT  \n",
+       "3       1024.911191       8    0.02958    886.717589  BTCUSDT  \n",
+       "4       1588.177691       8    0.04698   1408.316171  BTCUSDT  \n",
+       "...             ...     ...        ...           ...      ...  \n",
+       "81557   2233.077358      11    0.03267    964.619647  BTCUSDT  \n",
+       "81558  54041.078014      30    1.61325  47630.404848  BTCUSDT  \n",
+       "81559  11961.515631      17    0.37097   10951.03811  BTCUSDT  \n",
+       "81560   6299.139281      58    0.10162   2999.179466  BTCUSDT  \n",
+       "81561   37853.38668      37    1.26256  37261.365128  BTCUSDT  \n",
+       "\n",
+       "[81562 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -174,15 +391,15 @@
     "    df['trades'] = df['trades'].astype(int)\n",
     "    \n",
     "     # 데이터를 CSV 파일로 저장\n",
-    "    output_folder = './education/coin/jh_-/'  # 여기에 원하는 폴더 경로를 지정합니다.\n",
+    "    output_folder = 'C:\\education\\ml_dev\\coin\\jh_-'  # 여기에 원하는 폴더 경로를 지정합니다.\n",
     "    binance_csv = os.path.join(output_folder, f'{symbol}_data_{start_date}_{end_date}.csv')\n",
     "    df.to_csv(binance_csv, index=False)\n",
     "    print(f'데이터가 {binance_csv}에 저장되었습니다.')\n",
     "\n",
     "    return df\n",
     "\n",
-    "start_date = '2024-01-13'\n",
-    "end_date = '2024-01-13'\n",
+    "start_date = '2022-05-16'\n",
+    "end_date = '2022-05-16'\n",
     "symbol = symbols_usdt[0]\n",
     "get_data(start_date, end_date, symbol)"
    ]
