--- a/investing/investing news.ipynb
+++ b/investing/investing news.ipynb
@@ -19,7 +19,8 @@
     "from bs4 import BeautifulSoup\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.chrome.options import Options\n",
-    "import time\n"
+    "import time\n",
+    "import csv"
    ]
   },
   {
@@ -77,6 +78,117 @@
     "\n",
     "# 결과 출력\n",
     "print(news_titles)\n",
+    "\n",
+    "# 드라이버 종료\n",
+    "driver.quit()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "- RapidAPI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'message': 'You are not subscribed to this API.'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "url = \"https://investing4.p.rapidapi.com/news/most-popular-news\"\n",
+    "\n",
+    "headers = {\n",
+    "\t\"X-RapidAPI-Key\": \"3fad0e358amsh914f9e1e43c2f5dp119e40jsn93a7e69d6c6b\",\n",
+    "\t\"X-RapidAPI-Host\": \"investing4.p.rapidapi.com\"\n",
+    "}\n",
+    "\n",
+    "response = requests.get(url, headers=headers)\n",
+    "\n",
+    "print(response.json())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "- 전체 페이지에 대한 뉴스 제목과 본문을 csv로 저장"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'url' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 14\u001b[0m\n\u001b[0;32m     12\u001b[0m driver \u001b[38;5;241m=\u001b[39m webdriver\u001b[38;5;241m.\u001b[39mChrome(options\u001b[38;5;241m=\u001b[39mchrome_options)\n\u001b[0;32m     13\u001b[0m driver\u001b[38;5;241m.\u001b[39mexecute_cdp_cmd(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNetwork.setUserAgentOverride\u001b[39m\u001b[38;5;124m'\u001b[39m, {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124muserAgent\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36\u001b[39m\u001b[38;5;124m'\u001b[39m})\n\u001b[1;32m---> 14\u001b[0m driver\u001b[38;5;241m.\u001b[39mget(\u001b[43murl\u001b[49m)\n\u001b[0;32m     16\u001b[0m \u001b[38;5;66;03m# 페이지 끝까지 스크롤하여 모든 뉴스 로드\u001b[39;00m\n\u001b[0;32m     17\u001b[0m last_height \u001b[38;5;241m=\u001b[39m driver\u001b[38;5;241m.\u001b[39mexecute_script(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mreturn document.body.scrollHeight\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'url' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.chrome.options import Options\n",
+    "\n",
+    "# Chrome 브라우저를 백그라운드에서 실행하도록 옵션 설정\n",
+    "chrome_options = Options()\n",
+    "chrome_options.add_argument('--headless')  # 백그라운드 실행 옵션 추가\n",
+    "\n",
+    "# 크롬 드라이버 다운로드 및 실행 경로 지정\n",
+    "chrome_driver_path = 'C:\\education\\ml_dev\\coin\\jh_-\\investing\\chromedriver-win64'  # 자신의 크롬 드라이버 경로로 변경\n",
+    "\n",
+    "# Selenium으로 웹페이지 열기\n",
+    "driver = webdriver.Chrome(options=chrome_options)\n",
+    "driver.execute_cdp_cmd('Network.setUserAgentOverride', {\"userAgent\": 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36'})\n",
+    "driver.get(url)\n",
+    "\n",
+    "# 페이지 끝까지 스크롤하여 모든 뉴스 로드\n",
+    "last_height = driver.execute_script(\"return document.body.scrollHeight\")\n",
+    "while True:\n",
+    "    driver.execute_script(\"window.scrollTo(0, document.body.scrollHeight);\")\n",
+    "    time.sleep(2)\n",
+    "    new_height = driver.execute_script(\"return document.body.scrollHeight\")\n",
+    "    if new_height == last_height:\n",
+    "        break\n",
+    "    last_height = new_height\n",
+    "\n",
+    "# CSV 파일 생성 및 헤더 추가\n",
+    "csv_file = open('news_data.csv', 'w', encoding='utf-8', newline='')\n",
+    "csv_writer = csv.writer(csv_file)\n",
+    "csv_writer.writerow(['제목', '본문'])  # CSV 파일 헤더\n",
+    "\n",
+    "# 현재 페이지 소스코드 가져오기\n",
+    "page_source = driver.page_source\n",
+    "\n",
+    "# BeautifulSoup을 사용하여 뉴스 제목과 본문 추출 및 CSV에 추가\n",
+    "soup = BeautifulSoup(page_source, 'html.parser')\n",
+    "news_elements = soup.select('.js-accordion-item')\n",
+    "\n",
+    "for element in news_elements:\n",
+    "    title = element.select_one('.font-bold.hover\\\\:underline').text.strip()\n",
+    "    content = element.select_one('.articleDetails').text.strip()\n",
+    "    csv_writer.writerow([title, content])\n",
+    "\n",
+    "# CSV 파일 닫기\n",
+    "csv_file.close()\n",
     "\n",
     "# 드라이버 종료\n",
     "driver.quit()\n"
