--- a/investing/investing  test.ipynb
+++ b/investing/investing  test.ipynb
@@ -2,15 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
+    "from bs4 import BeautifulSoup\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.chrome.options import Options\n",
-    "from bs4 import BeautifulSoup\n",
-    "import time"
+    "import time\n",
+    "import csv\n",
+    "import json"
    ]
   },
   {
@@ -186,9 +188,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Enforcement Directorate arrests Katalyst executive in Bitcoin scam', 'Shiba Inu (SHIB) Becoming Bullish, Ethereum (ETH) Price Screams Rally Continuation, Bitcoin (BTC) Not Giving up Market Dominance', 'Crypto social media accounts hacked, spreading misinformation', 'BTIG upgrades Marathon Digital as Bitcoin draws attention after spot ETF approvals', 'Binance Issues Important Notice for BTC, XRP, ADA Futures Traders: Details', 'VanEck to liquidate Bitcoin Strategy ETF following SEC nod', \"BlackRock to Become BTC Biggest Holder, Analyst Predicts; Michael Saylor Issues Warning for BTC Holders; SHIB Rep Unveils Shibarium's Future: Crypto News Digest by U.Today\", 'JPMorgan CEO remains skeptical about Bitcoin as price dips', \"Max Keiser Points to BTC Price Growth Estimate, Justin Sun Withdraws $13.8 Million ETH From Binance, Elon Musk's Post Sparks SHIB, XRP Armies' Curiosity: Crypto News Digest by U.Today\", 'Ethereum (ETH) Makes Comeback, Finally', 'Find a Crypto Broker']\n",
+      "뉴스 헤더가 성공적으로 저장되었습니다.\n"
+     ]
+    }
+   ],
    "source": [
     "# Chrome 브라우저를 백그라운드에서 실행하도록 옵션 설정\n",
     "chrome_options = Options()\n",
@@ -214,7 +225,78 @@
     "print(news_titles)\n",
     "\n",
     "# 드라이버 종료\n",
-    "driver.quit()\n"
+    "driver.quit()\n",
+    "\n",
+    "# 뉴스 헤더를 JSON 파일로 저장\n",
+    "result_data = {'news_titles': news_titles}\n",
+    "with open('bitcoin_news_titles.json', 'w', encoding='utf-8') as json_file:\n",
+    "    json.dump(result_data, json_file, ensure_ascii=False, indent=4)\n",
+    "\n",
+    "print(\"뉴스 헤더가 성공적으로 저장되었습니다.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "- 전체 페이지에 대한 뉴스 제목과 본문을 json로 저장"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "뉴스 헤더가 성공적으로 저장되었습니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Chrome 브라우저를 백그라운드에서 실행하도록 옵션 설정\n",
+    "chrome_options = Options()\n",
+    "chrome_options.add_argument('--headless')  # 백그라운드 실행 옵션 추가\n",
+    "\n",
+    "# 크롬 드라이버 다운로드 및 실행 경로 지정 (자신의 크롬 드라이버 경로로 변경)\n",
+    "chrome_driver_path = 'C:\\\\education\\\\ml_dev\\\\coin\\\\jh_-\\\\investing\\\\chromedriver-win64'\n",
+    "\n",
+    "# Selenium으로 웹페이지 열기 함수\n",
+    "def get_news_titles(url):\n",
+    "    driver = webdriver.Chrome(options=chrome_options)\n",
+    "    driver.get(url)\n",
+    "    time.sleep(1)  # 페이지가 로딩되기를 기다림 (시간이 많이 걸릴 경우 조절 필요)\n",
+    "    \n",
+    "    # 현재 페이지 소스코드 가져오기\n",
+    "    page_source = driver.page_source\n",
+    "    \n",
+    "    # BeautifulSoup을 사용하여 뉴스 제목 추출\n",
+    "    soup = BeautifulSoup(page_source, 'html.parser')\n",
+    "    news_titles = [title.text.strip() for title in soup.select('.textDiv')]\n",
+    "    \n",
+    "    # 드라이버 종료\n",
+    "    driver.quit()\n",
+    "    \n",
+    "    return news_titles\n",
+    "\n",
+    "# 여러 페이지의 뉴스 헤더를 저장할 리스트\n",
+    "all_news_titles = []\n",
+    "\n",
+    "# 1부터 100까지의 페이지에 대해 뉴스 헤더를 가져와서 리스트에 추가\n",
+    "for page_number in range(1, 2):\n",
+    "    url = f\"https://www.investing.com/news/cryptocurrency-news/{page_number}\"\n",
+    "    news_titles = get_news_titles(url)\n",
+    "    all_news_titles.extend(news_titles)\n",
+    "\n",
+    "# 뉴스 헤더를 JSON 파일로 저장\n",
+    "result_data = {'news_titles': all_news_titles}\n",
+    "with open('2all_bitcoin_news_titles.json', 'w', encoding='utf-8') as json_file:\n",
+    "    json.dump(result_data, json_file, ensure_ascii=False, indent=4)\n",
+    "\n",
+    "print(\"뉴스 헤더가 성공적으로 저장되었습니다.\")"
    ]
   }
  ],
@@ -225,7 +307,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.13"
   }
  },
