--- a/investing/investing  test.ipynb
+++ b/investing/investing  test.ipynb
@@ -298,6 +298,15 @@
     "\n",
     "print(\"뉴스 헤더가 성공적으로 저장되었습니다.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test =1"
+   ]
   }
  ],
  "metadata": {
