--- a/investing/investing  test.ipynb
+++ b/investing/investing  test.ipynb
@@ -336,36 +336,42 @@
     "\n",
     "# Selenium으로 웹페이지 열기 함수\n",
     "def get_news_info(url):\n",
-    "    driver = webdriver.Chrome(options=chrome_options)\n",
-    "    driver.get(url)\n",
-    "    time.sleep(1)  # 페이지가 로딩되기를 기다림 (시간이 많이 걸릴 경우 조절 필요)\n",
-    "    \n",
-    "    # 현재 페이지 소스코드 가져오기\n",
-    "    page_source = driver.page_source\n",
-    "    \n",
-    "    # BeautifulSoup을 사용하여 뉴스 제목과 올라온 시간 추출\n",
-    "    soup = BeautifulSoup(page_source, 'html.parser')    \n",
-    "    \n",
-    "    news_info_list = []\n",
-    "    \n",
-    "    # 뉴스 제목과 올라온 시간이 포함된 요소 선택\n",
-    "    news_elements = soup.select('.largeTitle') \n",
-    "    \n",
-    "    for element in news_elements:\n",
-    "        # largeTitle 클래스 내에서 모든 .title과 .date를 찾음\n",
-    "        titles = element.select('.title')\n",
-    "        dates = element.select('.date')\n",
-    "        \n",
-    "        # 뉴스 제목과 올라온 시간이 있는 경우에만 결과 리스트에 추가\n",
-    "        for title, date in zip(titles, dates):\n",
-    "            title_text = title.text.strip()\n",
-    "            date_text = date.text.strip()\n",
-    "            news_info_list.append({'title': title_text, 'time': date_text})\n",
-    "    \n",
-    "    # 드라이버 종료\n",
-    "    driver.quit()\n",
-    "    \n",
-    "    return news_info_list\n",
+    "    try:\n",
+    "        driver = webdriver.Chrome(options=chrome_options)\n",
+    "        driver.get(url)\n",
+    "        time.sleep(1)  # 페이지가 로딩되기를 기다림 (시간이 많이 걸릴 경우 조절 필요)\n",
+    "\n",
+    "        # 현재 페이지 소스코드 가져오기\n",
+    "        page_source = driver.page_source\n",
+    "\n",
+    "        # BeautifulSoup을 사용하여 뉴스 제목과 올라온 시간 추출\n",
+    "        soup = BeautifulSoup(page_source, 'html.parser')    \n",
+    "\n",
+    "        news_info_list = []\n",
+    "\n",
+    "        # 뉴스 제목과 올라온 시간이 포함된 요소 선택\n",
+    "        news_elements = soup.select('.largeTitle') \n",
+    "\n",
+    "        for element in news_elements:\n",
+    "            # largeTitle 클래스 내에서 모든 .title과 .date를 찾음\n",
+    "            titles = element.select('.title')\n",
+    "            dates = element.select('.date')\n",
+    "\n",
+    "            # 뉴스 제목과 올라온 시간이 있는 경우에만 결과 리스트에 추가\n",
+    "            for title, date in zip(titles, dates):\n",
+    "                title_text = title.text.strip()\n",
+    "                date_text = date.text.strip()\n",
+    "                news_info_list.append({'title': title_text, 'time': date_text})\n",
+    "\n",
+    "        # 드라이버 종료\n",
+    "        driver.quit()\n",
+    "\n",
+    "        return news_info_list\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        # 에러가 발생했을 때 현재 페이지 번호를 출력하고 예외를 다시 발생시킴\n",
+    "        print(f\"에러가 발생했습니다. 페이지: {url}\")\n",
+    "        raise e\n",
     "\n",
     "# 여러 페이지의 뉴스 정보를 저장할 리스트\n",
     "all_news_info = []\n",
@@ -373,8 +379,13 @@
     "# 1부터 2까지의 페이지에 대해 뉴스 정보를 가져와서 리스트에 추가\n",
     "for page_number in range(1, 3):\n",
     "    url = f\"https://www.investing.com/news/cryptocurrency-news/{page_number}\"\n",
-    "    news_info = get_news_info(url)\n",
-    "    all_news_info.extend(news_info)\n",
+    "    try:\n",
+    "        news_info = get_news_info(url)\n",
+    "        all_news_info.extend(news_info)\n",
+    "    except Exception as e:\n",
+    "        # 에러가 발생했을 때 현재 페이지 번호를 출력하고 반복문을 종료\n",
+    "        print(f\"에러가 발생하여 프로그램을 종료합니다. 페이지: {page_number}\")\n",
+    "        break\n",
     "\n",
     "# 뉴스 정보를 JSON 파일로 저장\n",
     "result_data = {'news_info': all_news_info}\n",
