--- a/investing/investing  test.ipynb
+++ b/investing/investing  test.ipynb
@@ -309,13 +309,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "총 52개의 뉴스 정보 크롤링 완료 \n",
       "뉴스 정보가 성공적으로 저장되었습니다.\n"
      ]
     }
@@ -387,12 +389,19 @@
     "        print(f\"에러가 발생하여 프로그램을 종료합니다. 페이지: {page_number}\")\n",
     "        break\n",
     "\n",
+    "# 뉴스 정보를 출력하는 코드\n",
+    "# for i, news in enumerate(all_news_info, 1):\n",
+    "    # print(f\"{i}. 뉴스 헤더: {news['title']}, 업로드 시간:{news['time']}\")\n",
+    "    \n",
+    "# 총 몇개의 데이터를 가져왔는지 출력\n",
+    "print(f\"\\n총 {len(all_news_info)}개의 뉴스 정보 크롤링 완료 \")\n",
+    "\n",
     "# 뉴스 정보를 JSON 파일로 저장\n",
     "result_data = {'news_info': all_news_info}\n",
     "with open('all_cryptocurrency_news_info.json', 'w', encoding='utf-8') as json_file:\n",
     "    json.dump(result_data, json_file, ensure_ascii=False, indent=4)\n",
     "\n",
-    "print(\"뉴스 정보가 성공적으로 저장되었습니다.\")\n"
+    "print(\"뉴스 정보가 성공적으로 저장되었습니다.\")"
    ]
   },
   {
