--- a/investing/investing  test.ipynb
+++ b/investing/investing  test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -436,33 +436,26 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "총 0개의 뉴스 정보 크롤링 완료 \n",
+      "총 52개의 뉴스 정보 크롤링 완료 \n",
       "뉴스 정보가 성공적으로 저장되었습니다.\n"
      ]
     }
    ],
    "source": [
-    "# Chrome 브라우저를 백그라운드에서 실행하도록 옵션 설정\n",
-    "chrome_options = Options()\n",
-    "chrome_options.add_argument('--headless')  # 백그라운드 실행 옵션 추가\n",
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "import json\n",
     "\n",
-    "# Selenium으로 웹페이지 열기 함수\n",
     "def get_news_info(url):\n",
     "    try:\n",
-    "        driver = webdriver.Chrome(options=chrome_options)\n",
-    "        driver.get(url)\n",
-    "        time.sleep(10)  # 페이지가 로딩되기를 기다림 (시간이 많이 걸릴 경우 조절 필요)\n",
-    "\n",
-    "        # 현재 페이지 소스코드 가져오기\n",
-    "        page_source = driver.page_source\n",
-    "\n",
-    "        # BeautifulSoup을 사용하여 뉴스 제목과 올라온 시간 추출\n",
-    "        soup = BeautifulSoup(page_source, 'html.parser')    \n",
+    "        response = requests.get(url)\n",
+    "        response.raise_for_status()  # 오류가 발생하면 예외를 발생시킴\n",
+    "        soup = BeautifulSoup(response.text, 'html.parser')\n",
     "\n",
     "        news_info_list = []\n",
     "\n",
     "        # 뉴스 제목과 올라온 시간이 포함된 요소 선택\n",
-    "        news_elements = soup.select('.largeTitle') \n",
+    "        news_elements = soup.select('.largeTitle')\n",
     "\n",
     "        for element in news_elements:\n",
     "            # largeTitle 클래스 내에서 모든 .title과 .date를 찾음\n",
@@ -474,9 +467,6 @@
     "                title_text = title.text.strip()\n",
     "                date_text = date.text.strip()\n",
     "                news_info_list.append({'title': title_text, 'time': date_text})\n",
-    "\n",
-    "        # 드라이버 종료\n",
-    "        driver.quit()\n",
     "\n",
     "        return news_info_list\n",
     "\n",
@@ -498,7 +488,7 @@
     "        # 에러가 발생했을 때 현재 페이지 번호를 출력하고 반복문을 종료\n",
     "        print(f\"에러가 발생하여 프로그램을 종료합니다. 페이지: {page_number}\")\n",
     "        break\n",
-    "    \n",
+    "\n",
     "# 총 몇개의 데이터를 가져왔는지 출력\n",
     "print(f\"\\n총 {len(all_news_info)}개의 뉴스 정보 크롤링 완료 \")\n",
     "\n",
@@ -507,7 +497,7 @@
     "with open('all_cryptocurrency_news_info.json', 'w', encoding='utf-8') as json_file:\n",
     "    json.dump(result_data, json_file, ensure_ascii=False, indent=4)\n",
     "\n",
-    "print(\"뉴스 정보가 성공적으로 저장되었습니다.\")"
+    "print(\"뉴스 정보가 성공적으로 저장되었습니다.\")\n"
    ]
   },
   {
