--- a/investing/investing  test.ipynb
+++ b/investing/investing  test.ipynb
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "총 52개의 뉴스 정보 크롤링 완료 \n",
+      "총 171개의 뉴스 정보 크롤링 완료 \n",
       "뉴스 정보가 성공적으로 저장되었습니다.\n"
      ]
     }
@@ -479,7 +479,7 @@
     "all_news_info = []\n",
     "\n",
     "# 1부터 2까지의 페이지에 대해 뉴스 정보를 가져와서 리스트에 추가\n",
-    "for page_number in range(1, 3):\n",
+    "for page_number in range(1, 10):\n",
     "    url = f\"https://www.investing.com/news/cryptocurrency-news/{page_number}\"\n",
     "    try:\n",
     "        news_info = get_news_info(url)\n",
@@ -497,8 +497,7 @@
     "with open('all_cryptocurrency_news_info.json', 'w', encoding='utf-8') as json_file:\n",
     "    json.dump(result_data, json_file, ensure_ascii=False, indent=4)\n",
     "\n",
-    "print(\"뉴스 정보가 성공적으로 저장되었습니다.\")\n",
-    "asd = 1\n"
+    "print(\"뉴스 정보가 성공적으로 저장되었습니다.\")"
    ]
   },
   {
