--- a/investing/investing  test.ipynb
+++ b/investing/investing  test.ipynb
@@ -428,15 +428,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "에러가 발생했습니다. 페이지: https://www.investing.com/news/cryptocurrency-news/2169\n",
+      "에러가 발생하여 프로그램을 종료합니다. 페이지: 2169\n",
       "\n",
-      "총 171개의 뉴스 정보 크롤링 완료 \n",
+      "총 36822개의 뉴스 정보 크롤링 완료 \n",
       "뉴스 정보가 성공적으로 저장되었습니다.\n"
      ]
     }
@@ -479,7 +481,7 @@
     "all_news_info = []\n",
     "\n",
     "# 1부터 2까지의 페이지에 대해 뉴스 정보를 가져와서 리스트에 추가\n",
-    "for page_number in range(1, 10):\n",
+    "for page_number in range(3, 3802):\n",
     "    url = f\"https://www.investing.com/news/cryptocurrency-news/{page_number}\"\n",
     "    try:\n",
     "        news_info = get_news_info(url)\n",
