--- a/investing/investing_test.ipynb
+++ b/investing/investing_test.ipynb
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +547,7 @@
     "            # largeTitle 클래스 내에서 모든 .title과 .date를 찾음\n",
     "            titles = element.select('.title')\n",
     "            dates = element.select('.date')\n",
-    "\n",
+    "            \n",
     "            # 뉴스 제목과 올라온 시간이 있는 경우에만 결과 리스트에 추가\n",
     "            for title, date in zip(titles, dates):\n",
     "                title_text = title.text.strip()\n",
@@ -556,15 +556,23 @@
     "                # 상세 페이지 URL 구성\n",
     "                news_url = base_url + title['href']\n",
     "\n",
-    "                # 상세 페이지로 이동하여 본문 내용을 크롤링\n",
+    "                # 상세 페이지로 이동하여 본문 내용과 업로드 시간을 크롤링\n",
     "                news_response = requests.get(news_url, headers=headers)\n",
     "                news_soup = BeautifulSoup(news_response.text, 'html.parser')\n",
-    "                content_elements = news_soup.select('.WYSIWYG.articlePage > p')\n",
+    "                \n",
+    "                # 본문 내용 가져오기\n",
+    "                content_elements = news_soup.select('.WYSIWYG.articlePage > *:not(#imgCarousel)')  # imgCarousel 제외\n",
+    "                content_elements += news_soup.select('.leftColumn > .WYSIWYG.articlePage > div:not(.relatedInstrumentsWrapper)')  # relatedInstrumentsWrapper 제외\n",
     "                content_text = '\\n'.join([content.text.strip() for content in content_elements])\n",
     "\n",
+    "                # 업로드 시간 가져오기\n",
+    "                time_element = news_soup.select_one('.contentSectionDetails > span')\n",
+    "                time_text = time_element.text.strip() if time_element else None\n",
+    "\n",
+    "                # 결과 리스트에 추가\n",
     "                news_info_list.append({\n",
     "                    'title': title_text,\n",
-    "                    'time': date_text,\n",
+    "                    'time': time_text,\n",
     "                    'content': content_text\n",
     "                })\n",
     "\n",
@@ -597,11 +605,10 @@
     "\n",
     "# 뉴스 정보를 JSON 파일로 저장\n",
     "result_data = {'news_info': all_news_info}\n",
-    "with open('all_crypto_news_info.json', 'w', encoding='utf-8') as json_file:\n",
+    "with open('2all_crypto_news_info.json', 'w', encoding='utf-8') as json_file:\n",
     "    json.dump(result_data, json_file, ensure_ascii=False, indent=4)\n",
     "\n",
-    "print(\"뉴스 정보가 성공적으로 저장되었습니다.\")\n",
-    "asd=1"
+    "print(\"뉴스 정보가 성공적으로 저장되었습니다.\")\n"
    ]
   },
   {
@@ -614,26 +621,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 주식 관련 데이터는 vuex store에서 관리\n",
-    "async subscribeStocks() {\n",
-    "    await this.getStocks(); # 주식을 가져오는 action dispatch\n",
-    "    \n",
-    "    # getStocks action 내의 trycatch 문으로 에러를 잡아 stocksIsError 토클링\n",
-    "    if (this.stocksIsError) {\n",
-    "        this.setStocksIsError(false); # 일단 에러 무시\n",
-    "        await new Promise((resolve) => setTimeout(resolve, 1000)); # 1초만 대기\n",
-    "    }\n",
-    "    \n",
-    "    this.subscribeStocks() # 커넥션 끊기자마자 재귀호출하여 커넥션 유지\n",
-    "}"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -643,70 +630,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "뉴스 정보가 성공적으로 저장되었습니다. 파일명: cryptocurrency_news_2024-01-29.json\n"
-     ]
-    }
-   ],
-   "source": [
-    "import requests\n",
-    "from bs4 import BeautifulSoup\n",
-    "import json\n",
-    "import time\n",
-    "from datetime import datetime\n",
-    "\n",
-    "def get_news_info(url):\n",
-    "    try:\n",
-    "        response = requests.get(url)\n",
-    "        response.raise_for_status()\n",
-    "        soup = BeautifulSoup(response.text, 'html.parser')\n",
-    "\n",
-    "        news_info_list = []\n",
-    "\n",
-    "        news_elements = soup.select('.largeTitle')\n",
-    "\n",
-    "        for element in news_elements:\n",
-    "            titles = element.select('.title')\n",
-    "            dates = element.select('.date')\n",
-    "\n",
-    "            for title, date in zip(titles, dates):\n",
-    "                title_text = title.text.strip()\n",
-    "                date_text = date.text.strip()\n",
-    "                news_info_list.append({'title': title_text, 'time': date_text})\n",
-    "\n",
-    "        return news_info_list\n",
-    "\n",
-    "    except Exception as e:\n",
-    "        print(f\"에러가 발생했습니다. 페이지: {url}\")\n",
-    "        raise e\n",
-    "\n",
-    "def save_news_to_json(news_info):\n",
-    "    today_date = datetime.now().strftime(\"%Y-%m-%d\")\n",
-    "    filename = f\"cryptocurrency_news_{today_date}.json\"\n",
-    "    with open(filename, 'w', encoding='utf-8') as json_file:\n",
-    "        json.dump(news_info, json_file, ensure_ascii=False, indent=4)\n",
-    "    print(f\"뉴스 정보가 성공적으로 저장되었습니다. 파일명: {filename}\")\n",
-    "\n",
-    "def main():\n",
-    "    url = \"https://www.investing.com/news/cryptocurrency-news\"\n",
-    "    while True:\n",
-    "        try:\n",
-    "            news_info = get_news_info(url)\n",
-    "            if news_info:\n",
-    "                save_news_to_json(news_info)\n",
-    "        except Exception as e:\n",
-    "            print(\"오류 발생:\", e)\n",
-    "        time.sleep(60)  # 60초마다 페이지 갱신\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    main()"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
