--- a/binance/getcsv.ipynb
+++ b/binance/getcsv.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,12 +47,312 @@
     "    df['trades'] = df['trades'].astype(int)\n",
     "    return df\n",
     "\n",
-    "start_date = '2024-01-14'\n",
+    "start_date = '2023-07-14'\n",
     "end_date = '2024-01-15'\n",
-    "symbol = ['BTCUSDT']\n",
+    "symbol = ['SOLUSDT']\n",
     "for i in symbol:\n",
     "    df = get_data(start_date=start_date, end_date=end_date, symbol=i)\n",
-    "    df.to_csv(f'jh_binance_{i}.csv', index=False)"
+    "    df.to_csv(f'6m_{i}.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "- 3개의 코인데이터 csv 시계열 데이터로 합치는 코드"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# 각 비트코인 종목 데이터 파일 경로\n",
+    "six_m_BTCUSDT_path = 'C:\\\\education\\\\ml_dev\\\\coin\\jh_-\\\\binance\\\\6m_BTCUSDT.csv'\n",
+    "six_m_ETHUSDT_path = 'C:\\\\education\\\\ml_dev\\\\coin\\jh_-\\\\binance\\\\6m_ETHUSDT.csv'\n",
+    "six_m_SOLUSDT_path = 'C:\\\\education\\\\ml_dev\\\\coin\\jh_-\\\\binance\\\\6m_SOLUSDT.csv'\n",
+    "\n",
+    "# CSV 파일을 데이터프레임으로 읽기\n",
+    "BTCUSDT_df = pd.read_csv(six_m_BTCUSDT_path)\n",
+    "ETHUSDT_df = pd.read_csv(six_m_ETHUSDT_path)\n",
+    "SOLUSDT_df = pd.read_csv(six_m_SOLUSDT_path)\n",
+    "\n",
+    "# 시계열 데이터를 하나의 데이터프레임으로 합치기\n",
+    "merged_df = pd.concat([BTCUSDT_df, ETHUSDT_df, SOLUSDT_df])\n",
+    "\n",
+    "# 합친 데이터프레임을 CSV 파일로 저장하기\n",
+    "merged_df.to_csv('merged_bitcoin_data.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test1_df = pd.read_csv('bitcoin_6m.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>open_time</th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>quote_av</th>\n",
+       "      <th>trades</th>\n",
+       "      <th>tb_base_av</th>\n",
+       "      <th>tb_quote_av</th>\n",
+       "      <th>symbol</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-07-14 09:00:00</td>\n",
+       "      <td>31441.6</td>\n",
+       "      <td>31451.1</td>\n",
+       "      <td>31437.1</td>\n",
+       "      <td>31440.0</td>\n",
+       "      <td>409.895</td>\n",
+       "      <td>1.288859e+07</td>\n",
+       "      <td>3691</td>\n",
+       "      <td>171.229</td>\n",
+       "      <td>5.384128e+06</td>\n",
+       "      <td>BTCUSDT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023-07-14 09:01:00</td>\n",
+       "      <td>31440.1</td>\n",
+       "      <td>31448.0</td>\n",
+       "      <td>31436.5</td>\n",
+       "      <td>31445.6</td>\n",
+       "      <td>205.267</td>\n",
+       "      <td>6.454019e+06</td>\n",
+       "      <td>2242</td>\n",
+       "      <td>139.739</td>\n",
+       "      <td>4.393711e+06</td>\n",
+       "      <td>BTCUSDT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023-07-14 09:02:00</td>\n",
+       "      <td>31445.5</td>\n",
+       "      <td>31459.5</td>\n",
+       "      <td>31428.2</td>\n",
+       "      <td>31459.4</td>\n",
+       "      <td>324.958</td>\n",
+       "      <td>1.021708e+07</td>\n",
+       "      <td>3310</td>\n",
+       "      <td>146.179</td>\n",
+       "      <td>4.596811e+06</td>\n",
+       "      <td>BTCUSDT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2023-07-14 09:03:00</td>\n",
+       "      <td>31459.5</td>\n",
+       "      <td>31459.5</td>\n",
+       "      <td>31437.9</td>\n",
+       "      <td>31439.9</td>\n",
+       "      <td>181.418</td>\n",
+       "      <td>5.705181e+06</td>\n",
+       "      <td>1939</td>\n",
+       "      <td>41.867</td>\n",
+       "      <td>1.316560e+06</td>\n",
+       "      <td>BTCUSDT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023-07-14 09:04:00</td>\n",
+       "      <td>31439.9</td>\n",
+       "      <td>31440.0</td>\n",
+       "      <td>31416.0</td>\n",
+       "      <td>31417.4</td>\n",
+       "      <td>443.662</td>\n",
+       "      <td>1.394171e+07</td>\n",
+       "      <td>3529</td>\n",
+       "      <td>137.522</td>\n",
+       "      <td>4.321646e+06</td>\n",
+       "      <td>BTCUSDT</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             open_time     open     high      low    close   volume  \\\n",
+       "0  2023-07-14 09:00:00  31441.6  31451.1  31437.1  31440.0  409.895   \n",
+       "1  2023-07-14 09:01:00  31440.1  31448.0  31436.5  31445.6  205.267   \n",
+       "2  2023-07-14 09:02:00  31445.5  31459.5  31428.2  31459.4  324.958   \n",
+       "3  2023-07-14 09:03:00  31459.5  31459.5  31437.9  31439.9  181.418   \n",
+       "4  2023-07-14 09:04:00  31439.9  31440.0  31416.0  31417.4  443.662   \n",
+       "\n",
+       "       quote_av  trades  tb_base_av   tb_quote_av   symbol  \n",
+       "0  1.288859e+07    3691     171.229  5.384128e+06  BTCUSDT  \n",
+       "1  6.454019e+06    2242     139.739  4.393711e+06  BTCUSDT  \n",
+       "2  1.021708e+07    3310     146.179  4.596811e+06  BTCUSDT  \n",
+       "3  5.705181e+06    1939      41.867  1.316560e+06  BTCUSDT  \n",
+       "4  1.394171e+07    3529     137.522  4.321646e+06  BTCUSDT  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test1_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 799203 entries, 0 to 799202\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column       Non-Null Count   Dtype  \n",
+      "---  ------       --------------   -----  \n",
+      " 0   open_time    799203 non-null  object \n",
+      " 1   open         799203 non-null  float64\n",
+      " 2   high         799203 non-null  float64\n",
+      " 3   low          799203 non-null  float64\n",
+      " 4   close        799203 non-null  float64\n",
+      " 5   volume       799203 non-null  float64\n",
+      " 6   quote_av     799203 non-null  float64\n",
+      " 7   trades       799203 non-null  int64  \n",
+      " 8   tb_base_av   799203 non-null  float64\n",
+      " 9   tb_quote_av  799203 non-null  float64\n",
+      " 10  symbol       799203 non-null  object \n",
+      "dtypes: float64(8), int64(1), object(2)\n",
+      "memory usage: 67.1+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "test1_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tensorflow'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[12], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m train_test_split\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreprocessing\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m MinMaxScaler\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtensorflow\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mkeras\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodels\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Sequential\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtensorflow\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mkeras\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlayers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m LSTM, Dense\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow'"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import LSTM, Dense\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 데이터 불러오기\n",
+    "data = pd.read_csv('bitcoin_data.csv')\n",
+    "\n",
+    "# 타겟값 설정 (5분 후 종가)\n",
+    "data['target'] = data['close'].shift(-5)\n",
+    "\n",
+    "# NaN 값이 있는 행 삭제\n",
+    "data.dropna(inplace=True)\n",
+    "\n",
+    "# 입력 변수와 타겟 변수 분리\n",
+    "X = data.drop(columns=['open_time', 'close', 'symbol', 'target'])\n",
+    "y = data['target']\n",
+    "\n",
+    "# 데이터 정규화\n",
+    "scaler = MinMaxScaler()\n",
+    "X_scaled = scaler.fit_transform(X)\n",
+    "y_scaled = scaler.fit_transform(y.values.reshape(-1, 1))\n",
+    "\n",
+    "# 학습 데이터와 테스트 데이터로 분리\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y_scaled, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# LSTM 모델 생성\n",
+    "model = Sequential()\n",
+    "model.add(LSTM(units=50, return_sequences=True, input_shape=(X_train.shape[1], 1)))\n",
+    "model.add(LSTM(units=50, return_sequences=False))\n",
+    "model.add(Dense(units=1))\n",
+    "\n",
+    "# 모델 컴파일\n",
+    "model.compile(optimizer='adam', loss='mean_squared_error')\n",
+    "\n",
+    "# 모델 학습\n",
+    "model.fit(X_train, y_train, batch_size=32, epochs=100, validation_split=0.2)\n",
+    "\n",
+    "# 테스트 데이터로 예측\n",
+    "predictions = model.predict(X_test)\n",
+    "\n",
+    "# 예측 결과 역정규화\n",
+    "predictions = scaler.inverse_transform(predictions)\n",
+    "\n",
+    "# 예측 결과 출력\n",
+    "print(predictions)\n",
+    "\n",
+    "# 테스트 데이터의 실제 값 출력\n",
+    "print(y_test)"
    ]
   }
  ],
