--- a/investing/investing_test.ipynb
+++ b/investing/investing_test.ipynb
@@ -534,17 +534,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "페이지 4 크롤링 완료\n",
-      "페이지 5 크롤링 완료\n",
+      "페이지 3 크롤링 완료\n",
       "\n",
-      "총 34개의 뉴스 정보 크롤링 완료\n",
+      "총 17개의 뉴스 정보 크롤링 완료\n",
       "뉴스 정보가 성공적으로 저장되었습니다.\n"
      ]
     }
@@ -585,10 +584,12 @@
     "                news_soup = BeautifulSoup(news_response.text, 'html.parser')\n",
     "                content_elements = news_soup.select('.WYSIWYG.articlePage > p')\n",
     "                content_text = '\\n'.join([content.text.strip() for content in content_elements])\n",
+    "                time_element = news_soup.select_one('.contentSectionDetails > span')\n",
+    "                time_text = time_element.text.strip() if time_element else None\n",
     "\n",
     "                news_info_list.append({\n",
     "                    'title': title_text,\n",
-    "                    'time': date_text,\n",
+    "                    'time': time_text,\n",
     "                    'content': content_text\n",
     "                })\n",
     "\n",
@@ -602,7 +603,7 @@
     "all_news_info = []\n",
     "\n",
     "# 각 페이지에 대해 뉴스 정보를 가져와서 리스트에 추가\n",
-    "for page_number in range(4, 6):  # 페이지 범위 수정\n",
+    "for page_number in range(3, 4):  # 페이지 범위 수정\n",
     "    url = f\"https://www.investing.com/news/cryptocurrency-news/{page_number}\"\n",
     "    try:\n",
     "        news_info = get_news_info(url)\n",
@@ -624,8 +625,7 @@
     "with open('all_crypto_news_info.json', 'w', encoding='utf-8') as json_file:\n",
     "    json.dump(result_data, json_file, ensure_ascii=False, indent=4)\n",
     "\n",
-    "print(\"뉴스 정보가 성공적으로 저장되었습니다.\")\n",
-    "asd=1"
+    "print(\"뉴스 정보가 성공적으로 저장되었습니다.\")"
    ]
   },
   {
