--- a/binance/getcsv.ipynb
+++ b/binance/getcsv.ipynb
@@ -17,16 +17,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key = 'V0RnTw2vdjBcizJARYI8qWCT99Vej1DoDBAayNodNRLPKM6Nho87m2LN83JbL9o9'\n",
-    "api_secret = 'e5PIk5tkns5hSjE6qsc4JKSffVWO6VTbQuOY0xjgEBraKo6shnK3iC9rV2z1S2YI'\n",
+    "api_key = \"nz3BiMJaQubfXwLFAT5z9hCb8RaBj6ec0ddNq88dhI63ADawKrnebrRfE8xtAW7j\"\n",
+    "api_secret = \"rbTzXhZSllDqI2kfHgYL4IrfYcWHm3tFLHnWMDItMuIQYy3pVLzjHBaouaFoW3wX\"\n",
     "\n",
+    "from binance.client import Client\n",
     "from datetime import datetime\n",
     "import pandas as pd\n",
     "\n",
     "COLUMNS = ['open_time', 'open', 'high', 'low', 'close', 'volume', 'close_time', 'quote_av', 'trades', \n",
     "                   'tb_base_av', 'tb_quote_av', 'ignore']\n",
     "\n",
-    "from binance.client import Client\n",
     "client = Client(api_key=api_key, api_secret=api_secret)\n",
     "\n",
     "def get_data(start_date, end_date, symbol):\n",
@@ -47,12 +47,12 @@
     "    df['trades'] = df['trades'].astype(int)\n",
     "    return df\n",
     "\n",
-    "start_date = '2023-07-14'\n",
+    "start_date = '2023-10-14'\n",
     "end_date = '2024-01-15'\n",
-    "symbol = ['SOLUSDT']\n",
+    "symbol = ['BTCUSDT']\n",
     "for i in symbol:\n",
     "    df = get_data(start_date=start_date, end_date=end_date, symbol=i)\n",
-    "    df.to_csv(f'6m_{i}.csv', index=False)"
+    "    df.to_csv(f'3m_{i}.csv', index=False)"
    ]
   },
   {
