--- a/investing/zero_news_test1.ipynb
+++ b/investing/zero_news_test1.ipynb
@@ -362,9 +362,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 52\u001b[0m\n\u001b[0;32m     49\u001b[0m         time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m60\u001b[39m)\n\u001b[0;32m     51\u001b[0m \u001b[38;5;66;03m# 실시간으로 새로운 뉴스 확인하고 데이터프레임에 저장 및 CSV 파일에 저장\u001b[39;00m\n\u001b[1;32m---> 52\u001b[0m \u001b[43mget_new_crypto_news\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrss_url\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[1], line 49\u001b[0m, in \u001b[0;36mget_new_crypto_news\u001b[1;34m(rss_url)\u001b[0m\n\u001b[0;32m     46\u001b[0m     new_news_df\u001b[38;5;241m.\u001b[39mto_csv(file, header\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m     48\u001b[0m \u001b[38;5;66;03m# 1분마다 RSS 피드 다시 가져오기\u001b[39;00m\n\u001b[1;32m---> 49\u001b[0m \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m60\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "import feedparser\n",
     "import pandas as pd\n",
